media/css/style.css
/* ... */
#main_timeBank blockquote h2 {
    color: #0099CC;
    font-size: 40px;
    margin: 0;
    padding: 0;
	font-weight:bold;
	font-family: chula;
}
#main_timeBank blockquote p {
    background: url("../img/close_quote.png") no-repeat scroll right 0 transparent;
    font-family: chula;
    font-size: 16px;
    margin: 0;
    padding: 0 62px;
    word-wrap: break-word;
}
#main_timeBank blockquote h3 {
    color: #0099CC;
    font-size: 21px;
    margin: 0;
    padding: 10px 0 0;
	background:none;
	font-family: chula;
}
#main_timeBank #sitemap {
    background: url("../img/sub_tab_nav.png") no-repeat scroll 0 0 transparent;
    float: left;
    height: 39px;
    margin: 1em 0;
    padding: 11px 0 0 36px;
    width: 800px;
}
#main_timeBank #sitemap li {
    color: #FFFFFF;
    float: left;
    font-size: 25px;
    list-style: none outside none;
	font-family: chula;
}
#main_timeBank #sitemap li:before{
	content:'>';
	padding: 0 0 0 10px;
	position:relative;
	left:-5px;
}
#main_timeBank #sitemap li:first-child:before{
	visibility:hidden;
}
#main_timeBank #icon_set {
    clear: both;
    float: left;
    width: 445px;
	text-align:center;
}
#main_timeBank #icon_set h2{
	color:#0099cc;
	font-size:40px;
	font-family: chula;
}
#main_timeBank #icon_set a {
    display: inline-block;
    height: 100px;
	padding: 0 22px;
}
#main_timeBank #bannerRotating{
	float:right;
	clear:none;
}
#main_timeBank h3.title {
    background: url("../img/tb_highlight.png") no-repeat scroll 0 0 transparent;
    clear: both;
    color: #FFFFFF;
    font-size: 30px;
    height: 39px;
    margin: 0;
    padding: 9px 0;
    text-align: center;
    width: 295px;
	font-family: chula;
}
#main_timeBank ol li {
    background: url("../img/tb_bg.png") no-repeat scroll 0 0 transparent;
    float: left;
    height: 126px;
    list-style: decimal inside none;
    margin-left: 50px;
    padding: 20px;
    width: 223px;
	font-size:16px;
	margin-bottom:20px;
	font-family: Tahoma, Geneva, sans-serif;
}
#main_timeBank ul#volunteer{
	margin-bottom:25px;
}
#main_timeBank ol li:first-child{
	margin-left: 0px;
}
#main_timeBank ol li strong,#main_timeBank ol li p{
	padding:0;
	margin:0;
}
#main_timeBank ul#volunteer li:before{
	content:none;
}
#main_timeBank ul#volunteer li {
    float: left;
    font-family: chula;
    font-size: 18px;
    width: 298px;
}
#main_timeBank ul#volunteer li a {
    background: url("../img/orange_button.png") no-repeat scroll 0 0 transparent;
    color: #FFFFFF;
    display: inline-block;
    font-family: chula;
    font-size: 24px;
    height: 30px;
    text-align: center;
    width: 89px;
	margin:10px 0 0;
}
#main_timeBank ul#volunteer li  strong{
	color:#0099CC;
}
#main_timeBank ul#volunteer li p{
	padding: 0;
	margin: 0;
	color: #4c4c4c;
}
#main_timeBank ul#volunteer li div {
    background: url("../img/tb_bubble.png") no-repeat scroll 0 0 transparent;
    clear: both;
    height: 65px;
    padding: 21px 15px;
    width: 224px;
	color: #4c4c4c;
}
#main_timeBank ul#volunteer li img{
	float:left;
	margin: 0 10px 10px 0;
}
#main_timeBank ul li:first-child:before {
    visibility: hidden;
}
#main_timeBank #summary li {
    float: left;
    margin-left: 20px;
    width: 203px;
}
#main_timeBank #summary{
	float: left;
	margin: 25px 0 0;
}
#main_timeBank #summary li:first-child{
	margin-left:0;
}
#main_timeBank #summary p {
    color: #3F2501;
    display: inline-block;
    height: 40px;
    margin: 0;
	font-weight:bold;
}
#main_timeBank ul#summary li:before{
	content:none;
}
#main_timeBank #summary li .showNumber {
    background: url("../img/tb_counter.png") no-repeat scroll 0 0 transparent;
    color: #FFFFFF;
    font-size: 35px;
    font-weight: bold;
    height: 54px;
    padding: 6px 44px 3px 19px;
    text-align: right;
    width: 73px;
	font-family: chula;
}
#main_timeBank #banner{
	margin:0 0 15px;
}
/*timeBank > howItWork*/
#tb_hiw #main {
    background: url("../img/tb_hiw_bg.jpg") no-repeat scroll 0 0 transparent;
    min-height: 897px;
}
#tb_hiw #sitemap {
    background: url("../img/sub_tab_nav.png") no-repeat scroll 0 0 transparent;
    float: left;
    height: 39px;
    margin: 1em 0;
    padding: 11px 0 0 36px;
    width: 800px;
}
#tb_hiw #sitemap li {
    color: #FFFFFF;
    float: left;
    font-size: 25px;
    list-style: none outside none;
	font-family: chula;
}
#tb_hiw #sitemap li:before{
	content:'>';
	padding: 0 0 0 10px;
	position:relative;
	left:-5px;
}
#tb_hiw #sitemap li:first-child:before{
	visibility:hidden;
}
#tb_hiw #main h2 {
    clear: both;
    color: #0099CC;
    float: left;
    font-size: 37px;
    padding-left: 128px;
	font-family: chula;
}
#tb_hiw #icon_set {
    float: right;
    width: 445px;
	text-align:center;
}
#tb_hiw #icon_set h2{
	color:#0099cc;
	font-size:40px;
	font-family: chula;
}
#tb_hiw #icon_set a {
    display: inline-block;
    height: 100px;
	padding: 0 22px;
}
#tb_hiw h3.title {
    background: url("../img/tb_highlight.png") no-repeat scroll center 0 transparent;
    color: #FFFFFF;
    font-size: 29px;
    height: 39px;
    margin: 0;
    padding: 8px 0;
    text-align: center;
	font-family: chula;
}
#tb_hiw .table {
    float: left;
    width: 50%;
	margin: 35px 0 0;
}
#tb_hiw ol{
	width:50%;
	float:left;
}
#tb_hiw ol li {
    background: url("../img/tb_bg.png") no-repeat scroll 0 0 transparent;
    float: left;
    font-size: 20px;
    height: 150px;
    list-style: decimal inside none;
    margin-bottom: 20px;
    margin-left: 60px;
    padding: 10px 20px;
    width: 223px;
	font-family: chula;
}

#tb_hiw ol li strong, #tb_hiw ol li p {
    font-family: Tahoma, Geneva, sans-serif;
    font-size: 15px;
    margin: 0;
    padding: 0;
}
#tb_hiw ol li:first-child:before{
	content:none;
}
#tb_hiw ol li:before {
    background: url("../img/tb_1_list.png") no-repeat scroll 0 0 transparent;
    content: "";
    display: inline-block;
    height: 17px;
    left: 100px;
    margin: -31px 0 0 -23px;
    position: relative;
    top: -31px;
    width: 23px;
}
/* ... */

